# SKFlatAnalyzer_jin

./: .gitignore  .submitMeasFakeRate.sh.swp  CMakeLists.txt  README.md  doThis.sh  parseNPVweight.sh  setup.sh  submit2016postVFP.sh  submit2016preVFP.sh  submit2017.sh  submit2018.sh  submitALL.sh  submitConversion.sh  submitMeasFakeRate.sh  submitTriLepSamples.sh  submitUnbinned.sh
AnalyzerTools/: CMakeLists.txt
AnalyzerTools/include/: AnalyzerTools_LinkDef.h  MCCorrection.h  NonpromptParameter.h
AnalyzerTools/src/: BTagCalibrationStandalone.C  MCCorrection.C
Analyzers/: CMakeLists.txt
Analyzers/include/: AnalyzerCore.h  Analyzers_LinkDef.h  Analyzers_LinkDef.hpp  DataPreparation.h  DataPreprocess.h  DiLeptonBase.h  ElectronOptimization.h  MeasFakeRateV2.h  MeasFakeRateV4.h  MeasFakeRateV5.h.bak  OptElLooseWP.h  SKFlatNtuple.h  SkimTree_HNMultiLep.h  SkimTree_HighPt1LJets.h  TriLeptonBase.h  TutorialBase.h  TutorialRun.h  singlelepton_analysis.h
Analyzers/src/: AnalyzerCore.C  DataPreparation.C  DataPreprocess.C  DiLeptonBase.C  ElectronOptimization.C  ExampleRun.C  GetEffLumi.C  MeasFakeRateV2.C  MeasFakeRateV4.C  MeasFakeRateV5.C.bak  MeasureJetTaggingEfficiency.C  OptElLooseWP.C  SKFlatNtuple.C  SKFlatValidation.C  SkimTree_Dilepton.C  SkimTree_HNMultiLep.C  SkimTree_HighPt1LJets.C  TriLeptonBase.C  TutorialBase.C  TutorialRun.C  singlelepton_analysis.C
DataFormats/: CMakeLists.txt
DataFormats/include/: DataFormats_LinkDef.h  Electron.h  Event.h  FatJet.h  Jet.h  JetTaggingParameters.h  Lepton.h  Muon.h  Particle.h  Tau.h
DataFormats/src/: Electron.C  Event.C  FatJet.C  Jet.C  LHE.C  Muon.C  Tau.C
PyAnalyzers/: AcceptanceStudy.py  ClosDiLepTrigs.py  ClosFakeRate.py  ClosTriLepTrigs.py  ClosureDiLepTrigs.py  ConversionEstimator.py  ConversionEstimator.py.bak  DefineTrainData.py  DiLeptonClosure.py  DiLeptonValidation.py  MatrixEstimator.py  MatrixUnbinned.py  MatrixUnbinned.py.bak  MeasConvMatrix.py  MeasConversion.py  MeasFakeRate.py  MeasFakeRateV2.py  MeasFakeRateV3.py  MeasFakeRateV4.py  NonpromptEstimator.py  POGDiMuonValidation.py  POGMuonValidation.py  PromptEstimator.py  PromptEstimator.py.bak  PromptUnbinned.py  PromptUnbinned.py.bak  SkimNonpromptTree.py  SkimPromptTree.py  TestRun.py  TraceGenHistory.py  TutorialRun.py  ValidDiMuon.py  ValidParticleNet.py  hists.root  models.py  nonprompt.root  sample.py
PyAnalyzers/BackUps/: MeasConvMatrix.py.bak  MeasConversion.py.bak  PromptEstimator.py.bak
SampleLists/: bkgSamples.txt  diLepSamples.txt  fakeHeavy.txt  fakeLight.txt  fakeSamples.txt  forDataPreprocess.txt  qcdEMEnriched.txt  qcdMuEnriched.txt  qcdSamples.txt  signalSamples.txt  tempSamples.txt  triLepSamples.txt
SkimScripts/: GetEffLumiSIGNAL2016postVFP_El.sh  GetEffLumiSIGNAL2016preVFP_El.sh  GetEffLumiSIGNAL2018_Mu.sh  skimDATA.sh  skimDY.sh  skimQCD.sh  skimSIGNAL2016postVFP_El.sh  skimSIGNAL2016preVFP_El.sh  skimT.sh  skimTEMP.sh  skimTT.sh  skimVV.sh  skimW.sh
SubmitScripts/: submitGetEffLumiSIGNAL.sh  submitSIGNAL.sh
lib/: libAnalyzers.rootmap  libDataFormats.rootmap
python/: CheckHistMap.py  CheckJobStatus.py  Monitoring.py  PrintLHE.py  PrintOldLogs.py  PrintToDoLists.py  SKFlat.py  SKFlat.py.bak  SKFlatV0.py  SendEmail.py  Submission.py  UserInfo_shjeon.py  UserInfo_template.py  checkMissingFiles.py
script/: build.sh  install_lhapdf.sh
test/: SKFlat.sh
(+3978 files in other folders)
